[package]
name = "newapp"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31.1"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
eframe = "0.31.1"
sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "tls-native-tls","mysql" ] }
async-std = "1.13.1"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.31"